--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -18,6 +18,16 @@
         android:layout_height="match_parent"
         tools:context=".BaseActivity">
 
+<!--        <com.tarrakki.CenteredToolbar
+            android:id="@+id/mToolBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            title="@{vm.title}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>-->
+
         <android.support.v7.widget.Toolbar
             android:id="@+id/mToolBar"
             android:layout_width="match_parent"
@@ -36,6 +46,7 @@
             android:maxLength="24"
             android:maxLines="1"
             android:text="@{vm.title}"
+            android:ellipsize="end"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@android:color/white"
