--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -5,7 +5,7 @@
 
     <data>
 
-        <import type="android.view.View"/>
+        <import type="android.view.View" />
 
         <variable
             name="vm"
@@ -25,9 +25,104 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginTop="@dimen/default_space"
-            android:layout_marginBottom="@dimen/default_space">
+            android:layout_marginBottom="@dimen/default_space"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/llEmptyCart"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="@{vm.isEmptyCart?View.VISIBLE:View.GONE}">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shape_cart_view"
+                    android:elevation="2dp"
+                    android:orientation="vertical"
+                    android:layout_marginStart="@dimen/default_space"
+                    android:layout_marginEnd="@dimen/default_space"
+                    android:padding="8dp">
+
+                    <LinearLayout
+                        android:layout_marginTop="@dimen/space_20"
+                        android:layout_marginBottom="@dimen/space_20"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/ic_empty" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/lato_semibold"
+                            android:text="@string/woops"
+                            android:gravity="center"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="@dimen/default_space"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                            android:textColor="@color/black" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:layout_gravity="center"
+                            android:text="@string/your_cart_is_empty"
+                            android:layout_marginTop="@dimen/space_8"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
+                    </LinearLayout>
+
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:layout_marginStart="@dimen/default_space"
+                    android:layout_marginEnd="@dimen/default_space"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/btnAddFund"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/default_space"
+                        android:layout_marginBottom="@dimen/space_1"
+                        android:background="@drawable/shape_btn_idle_bg"
+                        android:fontFamily="@font/lato_bold"
+                        android:paddingStart="@dimen/space_16"
+                        android:paddingEnd="@dimen/space_16"
+                        android:text="@string/add_funds"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white" />
+
+                    <Button
+                        android:id="@+id/btnExploreInvestmentStrategies"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/space_15"
+                        android:layout_marginBottom="@dimen/space_3"
+                        android:background="@drawable/shape_btn_idle_bg"
+                        android:fontFamily="@font/lato_bold"
+                        android:paddingStart="@dimen/space_16"
+                        android:paddingEnd="@dimen/space_16"
+                        android:text="@string/explore_investment_strategies"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white" />
+
+                </LinearLayout>
+
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/llWhyInflationMatter"
@@ -38,37 +133,37 @@
                 android:background="@drawable/shape_cart_view"
                 android:elevation="2dp"
                 android:orientation="vertical"
-                android:padding="8dp">
+                android:padding="8dp"
+                android:visibility="@{vm.isEmptyCart?View.GONE:View.VISIBLE}">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/lato_semibold"
-                    android:text="@{vm.isEmptyCart?@string/no_funds_cart:@string/great_job}"
+                    android:text="@string/great_job"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@android:color/black" />
 
                 <TextView
-                    android:visibility="@{vm.isEmptyCart?View.GONE:View.VISIBLE}"
                     android:id="@+id/tvWhyTarrakkiiReason"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="@dimen/space_8"
                     android:lineSpacingExtra="@dimen/space_4"
                     android:text="@string/you_are_almost_there_here_is_a_summary_of_your_order"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
                 <Button
-                    android:id="@+id/btnAddFund"
+                    android:id="@+id/btnEditFund"
                     android:layout_width="wrap_content"
                     android:layout_height="38dp"
-                    android:layout_marginTop="@dimen/default_space"
+                    android:layout_marginTop="@dimen/space_8"
+                    android:layout_marginBottom="@dimen/space_1"
                     android:background="@drawable/shape_btn_idle_bg"
                     android:fontFamily="@font/lato_bold"
                     android:paddingStart="@dimen/space_16"
                     android:paddingEnd="@dimen/space_16"
-                    android:text="@{vm.isEmptyCart?@string/add_funds:@string/edit_funds}"
-                    android:layout_marginBottom="@dimen/space_1"
+                    android:text="@string/edit_funds"
                     android:textAllCaps="true"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@color/white" />
@@ -77,17 +172,17 @@
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/lyt_orders"
-                android:visibility="@{vm.isEmptyCart?View.GONE:View.VISIBLE}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/default_space"
-                android:layout_marginEnd="@dimen/default_space"
                 android:layout_marginTop="@dimen/default_space"
+                android:layout_marginEnd="@dimen/default_space"
                 android:layout_marginBottom="@dimen/space_2"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="2dp"
                 android:orientation="vertical"
-                android:padding="8dp">
+                android:padding="8dp"
+                android:visibility="@{vm.isEmptyCart?View.GONE:View.VISIBLE}">
 
                 <TextView
                     android:id="@+id/tvOrderSummary"
