--- a/app/src/main/res/layout/dialog_redeem_portfolio.xml
+++ b/app/src/main/res/layout/dialog_redeem_portfolio.xml
@@ -16,6 +16,12 @@
             name="amount"
             type="String" />
 
+        <variable
+            name="isSingleFolio"
+            type="Boolean"/>
+
+        <import type="android.view.View"/>
+
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -52,6 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_space"
             android:text="@string/choose_folio"
+            android:visibility="@{isSingleFolio?View.GONE:View.VISIBLE}"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="parent"
@@ -63,6 +70,7 @@
             android:layout_height="36dp"
             android:layout_marginTop="@dimen/space_4"
             android:layout_marginEnd="@dimen/space_4"
+            android:visibility="@{isSingleFolio?View.GONE:View.VISIBLE}"
             android:background="@drawable/shape_edt_gray_round"
             android:completionThreshold="1"
             android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
