--- a/app/src/main/res/layout/dialog_stop_transaction.xml
+++ b/app/src/main/res/layout/dialog_stop_transaction.xml
@@ -16,6 +16,12 @@
             name="amount"
             type="String" />
 
+        <variable
+            name="isSingleFolio"
+            type="Boolean"/>
+
+        <import type="android.view.View"/>
+
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -53,6 +59,7 @@
             android:layout_marginTop="@dimen/default_space"
             android:text="@string/choose_folio"
             android:textAllCaps="true"
+            android:visibility="@{isSingleFolio?View.GONE:View.VISIBLE}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvInvestmentL" />
@@ -68,6 +75,7 @@
             android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
             android:hint="@string/choose_folio"
             android:maxLines="1"
+            android:visibility="@{isSingleFolio?View.GONE:View.VISIBLE}"
             android:paddingStart="@dimen/default_space"
             android:drawableStart="@drawable/ic_folio_number"
             android:drawablePadding="@dimen/space_8"
