--- a/app/src/main/res/layout/row_direct_investment_list_item.xml
+++ b/app/src/main/res/layout/row_direct_investment_list_item.xml
@@ -5,7 +5,7 @@
 
     <data>
 
-        <import type="android.view.View"/>
+        <import type="android.view.View" />
 
         <variable
             name="investment"
@@ -38,9 +38,10 @@
             android:id="@+id/ll_folio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="@dimen/space_8"
+            android:orientation="horizontal"
+            android:visibility="@{investment.moreFolioList?View.GONE:View.VISIBLE}"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvName">
@@ -56,11 +57,11 @@
                 android:id="@+id/tvFolioNo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
                 android:fontFamily="@font/lato_semibold"
-                android:text="@{investment.folioNoList}"
                 android:maxLines="2"
                 android:paddingStart="@dimen/space_4"
-                android:ellipsize="end"
+                android:text="@{investment.folioNoList}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:textColor="@color/semi_black"
                 tools:text="@string/dummy3" />
@@ -107,107 +108,214 @@
                 android:layout_marginEnd="@dimen/space_3"
                 android:drawableStart="@drawable/ic_stop"
                 android:drawablePadding="@dimen/space_4"
-                android:visibility="@{investment.isSIP?View.VISIBLE:View.GONE}"
                 android:gravity="center"
                 android:text="@string/stop"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
-                android:textColor="@color/colorAccent" />
+                android:textColor="@color/colorAccent"
+                android:visibility="@{investment.isSIP?View.VISIBLE:View.GONE}" />
 
         </LinearLayout>
 
-        <View
-            android:id="@+id/mDivider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="@dimen/space_8"
-            android:background="@color/lighter_gray"
-            app:layout_constraintTop_toBottomOf="@+id/ll_options" />
-
-        <TextView
-            android:id="@+id/tvLastPriceL"
-            android:layout_width="wrap_content"
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/lyt_single_folio_value"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_8"
-            android:text="@string/total_investment_"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/mDivider" />
-
-        <TextView
-            android:id="@+id/tvLastPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_semibold"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/semi_black"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvLastPriceL"
-            app:price="@{investment.totalInvestment}"
-            tools:text="\u20B939.55" />
-
-        <TextView
-            android:id="@+id/tvDayChangeL"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_8"
-            android:layout_marginEnd="8dp"
-            android:text="@string/current_value_"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintEnd_toStartOf="@+id/tvYDRLabel"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/gdlCenter"
-            app:layout_constraintTop_toBottomOf="@id/mDivider" />
-
-        <TextView
-            android:id="@+id/tvDayChange"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_semibold"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/semi_black"
-            app:layout_constraintStart_toStartOf="@id/tvDayChangeL"
-            app:layout_constraintTop_toBottomOf="@+id/tvDayChangeL"
-            app:price="@{investment.currentValue}"
-            tools:text="@string/dummy3" />
-
-        <TextView
-            android:id="@+id/tvYDRLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="@dimen/space_8"
-            android:text="@{investment.xirrLabel}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:visibility="@{investment.moreFolioList?View.GONE:View.VISIBLE}"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/gdlCenterEnd"
-            app:layout_constraintTop_toBottomOf="@id/mDivider" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ll_options">
 
-        <TextView
-            android:id="@+id/tvYDR"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_semibold"
-            android:text="@{investment.xiRR}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/semi_black"
-            app:layout_constraintStart_toStartOf="@id/tvYDRLabel"
-            app:layout_constraintTop_toBottomOf="@+id/tvYDRLabel"
-            tools:text="17.85%" />
+            <View
+                android:id="@+id/mDivider"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/lighter_gray"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <android.support.constraint.Guideline
-            android:id="@+id/gdlCenter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.42" />
+            <TextView
+                android:id="@+id/tvLastPriceL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/space_8"
+                android:text="@string/total_investment_"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/mDivider" />
 
-        <android.support.constraint.Guideline
-            android:id="@+id/gdlCenterEnd"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/tvLastPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_semibold"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/semi_black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvLastPriceL"
+                app:price="@{investment.totalInvestment}"
+                tools:text="\u20B939.55" />
+
+            <TextView
+                android:id="@+id/tvDayChangeL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/space_8"
+                android:layout_marginEnd="8dp"
+                android:text="@string/current_value_"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                app:layout_constraintEnd_toStartOf="@+id/tvYDRLabel"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/gdlCenter"
+                app:layout_constraintTop_toBottomOf="@id/mDivider" />
+
+            <TextView
+                android:id="@+id/tvDayChange"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_semibold"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/semi_black"
+                app:layout_constraintStart_toStartOf="@id/tvDayChangeL"
+                app:layout_constraintTop_toBottomOf="@+id/tvDayChangeL"
+                app:price="@{investment.currentValue}"
+                tools:text="@string/dummy3" />
+
+            <TextView
+                android:id="@+id/tvYDRLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="@dimen/space_8"
+                android:text="@{investment.xirrLabel}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/gdlCenterEnd"
+                app:layout_constraintTop_toBottomOf="@id/mDivider" />
+
+            <TextView
+                android:id="@+id/tvYDR"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_semibold"
+                android:text="@{investment.xiRR}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/semi_black"
+                app:layout_constraintStart_toStartOf="@id/tvYDRLabel"
+                app:layout_constraintTop_toBottomOf="@+id/tvYDRLabel"
+                tools:text="17.85%" />
+
+            <android.support.constraint.Guideline
+                android:id="@+id/gdlCenter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.42" />
+
+            <android.support.constraint.Guideline
+                android:id="@+id/gdlCenterEnd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.80" />
+        </android.support.constraint.ConstraintLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/lyt_multi_folio_value"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.80" />
+            android:layout_marginTop="@dimen/space_8"
+            android:visibility="@{investment.moreFolioList?View.VISIBLE:View.GONE}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/lyt_single_folio_value">
+
+            <HorizontalScrollView
+                android:layout_width="0dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_height="wrap_content">
+
+                <TableLayout
+                    android:id="@+id/tlfolio"
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:stretchColumns="*">
+
+                    <TableRow
+                        android:background="@color/bg_img_color"
+                        android:id="@+id/trContent"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:padding="@dimen/space_8"
+                            android:id="@+id/tvFolioNumberMultiple"
+                            android:layout_width="wrap_content"
+                            android:text="Folio\nNumber"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                            android:textColor="@color/black"
+                            tools:text="1234546552" />
+
+                        <TextView
+                            android:padding="@dimen/space_8"
+                            android:id="@+id/tvTotalInvestmentMultiple"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:layout_gravity="center"
+                            android:text="Total\nInvestment"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                            android:textColor="@color/black"
+                            tools:text="74876565" />
+
+                        <TextView
+                            android:padding="@dimen/space_8"
+                            android:id="@+id/tvCurrentValueMultiple"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Current\nValue"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                            android:textColor="@color/black"
+                            tools:text="74876565" />
+
+                        <TextView
+                            android:padding="@dimen/space_8"
+                            android:id="@+id/tvUnitsMultiple"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="Units"
+                            android:gravity="center"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                            android:textColor="@color/black"
+                            tools:text="74876565" />
+
+                        <TextView
+                            android:padding="@dimen/space_8"
+                            android:id="@+id/tvReturnsMultiple"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="%\nReturns"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                            android:textColor="@color/black"
+                            tools:text="74876565" />
+
+                    </TableRow>
+                </TableLayout>
+
+            </HorizontalScrollView>
+
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
