--- a/app/src/main/res/layout/row_goal_based_investment_details_list_item.xml
+++ b/app/src/main/res/layout/row_goal_based_investment_details_list_item.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="android.view.View"/>
+
+        <import type="android.view.View" />
 
         <variable
             name="investment"
@@ -39,8 +40,9 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="@dimen/space_8"
+            android:visibility="@{investment.moreFolioList?View.GONE:View.VISIBLE}"
             app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginTop="@dimen/space_8"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvName">
 
@@ -55,113 +57,125 @@
                 android:id="@+id/tvFolioNo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
                 android:fontFamily="@font/lato_semibold"
-                android:text="@{investment.folioNoList}"
                 android:maxLines="2"
                 android:paddingStart="@dimen/space_4"
-                android:ellipsize="end"
+                android:text="@{investment.folioNoList}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:textColor="@color/semi_black"
                 tools:text="@string/dummy3" />
         </android.support.v7.widget.LinearLayoutCompat>
 
-        <TextView
-            android:id="@+id/tvLastPriceL"
-            android:layout_width="wrap_content"
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/llSingleFolio"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:text="@string/total_investment_"
             android:layout_marginTop="@dimen/space_8"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintEnd_toStartOf="@+id/gdlCenter"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ll_folio" />
-
-        <TextView
-            android:id="@+id/tvLastPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_semibold"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/semi_black"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvLastPriceL"
-            app:price="@{investment.totalInvestment}"
-            tools:text="\u20B939.55" />
-
-        <TextView
-            android:id="@+id/tvDayChangeL"
-            android:layout_width="wrap_content"
-            android:layout_height="14dp"
-            android:layout_marginEnd="8dp"
-            android:text="@string/current_value_"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintEnd_toStartOf="@+id/tvXIRRNo"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/gdlCenter"
-            app:layout_constraintTop_toTopOf="@+id/tvLastPriceL" />
-
-        <TextView
-            android:id="@+id/tvDayChange"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_semibold"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/semi_black"
-            app:layout_constraintStart_toStartOf="@id/tvDayChangeL"
-            app:layout_constraintTop_toBottomOf="@+id/tvDayChangeL"
-            app:price="@{investment.currentValue}"
-            tools:text="@string/dummy3" />
-
-        <TextView
-            android:id="@+id/tvXIRRL"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="@{investment.xirrLabel}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:visibility="@{investment.moreFolioList?View.GONE:View.VISIBLE}"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/gdlEnd"
-            app:layout_constraintTop_toTopOf="@+id/tvDayChangeL" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ll_folio">
 
-        <TextView
-            android:id="@+id/tvXIRRNo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_semibold"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/semi_black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@id/tvXIRRL"
-            app:layout_constraintTop_toBottomOf="@+id/tvXIRRL"
-            android:text="@{investment.xiRR}"
-            tools:text="@string/dummy3" />
+            <TextView
+                android:id="@+id/tvLastPriceL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:text="@string/total_investment_"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                app:layout_constraintEnd_toStartOf="@+id/gdlCenter"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <android.support.constraint.Guideline
-            android:id="@+id/gdlCenter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.42" />
+            <TextView
+                android:id="@+id/tvLastPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_semibold"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/semi_black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvLastPriceL"
+                app:price="@{investment.totalInvestment}"
+                tools:text="\u20B939.55" />
 
-        <android.support.constraint.Guideline
-            android:id="@+id/gdlEnd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.80" />
+            <TextView
+                android:id="@+id/tvDayChangeL"
+                android:layout_width="wrap_content"
+                android:layout_height="14dp"
+                android:layout_marginEnd="8dp"
+                android:text="@string/current_value_"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                app:layout_constraintEnd_toStartOf="@+id/tvXIRRNo"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/gdlCenter"
+                app:layout_constraintTop_toTopOf="@+id/tvLastPriceL" />
+
+            <TextView
+                android:id="@+id/tvDayChange"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_semibold"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/semi_black"
+                app:layout_constraintStart_toStartOf="@id/tvDayChangeL"
+                app:layout_constraintTop_toBottomOf="@+id/tvDayChangeL"
+                app:price="@{investment.currentValue}"
+                tools:text="@string/dummy3" />
+
+            <TextView
+                android:id="@+id/tvXIRRL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="@{investment.xirrLabel}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/gdlEnd"
+                app:layout_constraintTop_toTopOf="@+id/tvDayChangeL" />
+
+            <TextView
+                android:id="@+id/tvXIRRNo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_semibold"
+                android:text="@{investment.xiRR}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/semi_black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@id/tvXIRRL"
+                app:layout_constraintTop_toBottomOf="@+id/tvXIRRL"
+                tools:text="@string/dummy3" />
+
+            <android.support.constraint.Guideline
+                android:id="@+id/gdlCenter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.42" />
+
+            <android.support.constraint.Guideline
+                android:id="@+id/gdlEnd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.80" />
+
+        </android.support.constraint.ConstraintLayout>
 
         <LinearLayout
-            android:layout_marginTop="@dimen/space_8"
-            app:layout_constraintTop_toBottomOf="@+id/tvLastPrice"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/llFolioOptions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginTop="@dimen/space_8"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/llSingleFolio">
 
             <TextView
                 android:id="@+id/tvAddPortfolio"
@@ -173,7 +187,7 @@
                 android:gravity="center"
                 android:text="@string/add"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:textColor="@color/colorAccent"/>
+                android:textColor="@color/colorAccent" />
 
             <TextView
                 android:id="@+id/tvRedeem"
@@ -185,7 +199,7 @@
                 android:gravity="center"
                 android:text="@string/redeem"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:textColor="@color/colorAccent"/>
+                android:textColor="@color/colorAccent" />
 
             <TextView
                 android:id="@+id/tvStopPortfolio"
@@ -195,12 +209,109 @@
                 android:drawableStart="@drawable/ic_stop"
                 android:drawablePadding="@dimen/space_4"
                 android:gravity="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:text="@string/stop"
-                android:visibility="@{investment.isSIP?View.VISIBLE:View.GONE}"
-                android:textColor="@color/colorAccent"/>
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/colorAccent"
+                android:visibility="@{investment.isSIP?View.VISIBLE:View.GONE}" />
 
         </LinearLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/lyt_multi_folio_value"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_8"
+            android:visibility="@{investment.moreFolioList?View.VISIBLE:View.GONE}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/llFolioOptions">
+
+            <HorizontalScrollView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TableLayout
+                    android:id="@+id/tlfolio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:stretchColumns="*">
+
+                    <TableRow
+                        android:id="@+id/trContent"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/bg_img_color">
+
+                        <TextView
+                            android:id="@+id/tvFolioNumberMultiple"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:padding="@dimen/space_8"
+                            android:text="Folio\nNumber"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                            android:textColor="@color/black"
+                            tools:text="1234546552" />
+
+                        <TextView
+                            android:id="@+id/tvTotalInvestmentMultiple"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:padding="@dimen/space_8"
+                            android:text="Total\nInvestment"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                            android:textColor="@color/black"
+                            tools:text="74876565" />
+
+                        <TextView
+                            android:id="@+id/tvCurrentValueMultiple"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:padding="@dimen/space_8"
+                            android:text="Current\nValue"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                            android:textColor="@color/black"
+                            tools:text="74876565" />
+
+                        <TextView
+                            android:id="@+id/tvUnitsMultiple"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:padding="@dimen/space_8"
+                            android:text="Units"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                            android:textColor="@color/black"
+                            tools:text="74876565" />
+
+                        <TextView
+                            android:id="@+id/tvReturnsMultiple"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:padding="@dimen/space_8"
+                            android:text="%\nReturns"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                            android:textColor="@color/black"
+                            tools:text="74876565" />
+
+                    </TableRow>
+                </TableLayout>
+
+            </HorizontalScrollView>
+
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
